<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/play"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btnStart"
        android:layout_width="157dp"
        android:layout_height="137dp"
        android:background="@null"
        android:onClick="startPage"
        android:contentDescription="@string/desc_button_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695"
        app:srcCompat="@drawable/button_start"
        tools:srcCompat="@drawable/button_start" />

    <ImageButton
        android:id="@+id/btnHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/desc_button_help"
        android:onClick="openManual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803"
        app:srcCompat="@drawable/button_help" />

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="87dp"
        android:layout_height="89dp"
        android:background="@null"
        android:contentDescription="@string/desc_button_shutdown"
        android:onClick="closeApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.805"
        app:srcCompat="@drawable/button_shutdown" />


</androidx.constraintlayout.widget.ConstraintLayout>