<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/manual_1"
    tools:context=".Manual">


    <ImageButton
        android:id="@+id/btnManualClose"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:background="@null"
        android:contentDescription="@string/desc_manual_button_close"
        android:scaleType="fitCenter"
        android:onClick="pageBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"
        app:srcCompat="@drawable/button_close" />

    <ImageButton
        android:id="@+id/btnPrev"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:background="@null"
        android:contentDescription="@string/desc_manual_button_back"
        android:onClick="pagePrev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/button_back"
        android:scaleType="fitCenter" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:background="@null"
        android:contentDescription="@string/desc_manual_button_next"
        android:scaleType="fitCenter"
        android:onClick="pageNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.624"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/button_next" />

</androidx.constraintlayout.widget.ConstraintLayout>