<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/volcano_scene1"
    tools:context=".VolcanoStory">

    <!--first page-->

    <ImageView
        android:id="@+id/btnPrev"
        android:layout_width="103dp"
        android:layout_height="50dp"
        android:background="@null"
        android:contentDescription="@string/desc_manual_button_back"
        android:onClick="pageBack"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988"
        app:srcCompat="@drawable/button_back" />
    <!--first page-->
    <ImageView
        android:id="@+id/btnNext"
        android:layout_width="103dp"
        android:layout_height="50dp"
        android:background="@null"
        android:contentDescription="@string/desc_manual_button_next"
        android:onClick="pageNext"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988"
        app:srcCompat="@drawable/button_next"
        tools:ignore="UsingOnClickInXml" />
    <!--first page-->
    <ImageView
        android:id="@+id/btnExit"
        android:layout_width="65dp"
        android:layout_height="62dp"
        android:visibility="visible"
        android:onClick="pageExit"
        android:contentDescription="@string/desc_manual_button_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017"
        app:srcCompat="@drawable/button_close" />

    <ImageView
        android:id="@+id/platform"
        android:layout_width="753dp"
        android:layout_height="671dp"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/template_blue" />

    <ImageView
        android:id="@+id/volcano_card1"
        android:layout_width="591dp"
        android:layout_height="345dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/volcano_prompt1" />

    <ImageView
        android:id="@+id/first_choice"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_manual_button_next"
        android:onClick="pageFirstChoice"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        app:srcCompat="@drawable/v1" />

    <ImageView
        android:id="@+id/second_choice"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_manual_button_next"
        android:onClick="pageSecondChoice"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        app:srcCompat="@drawable/v2" />

    <ImageView
        android:id="@+id/third_choice"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_manual_button_next"
        android:onClick="pageThirdChoice"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        app:srcCompat="@drawable/v3" />


    <ImageView
        android:id="@+id/wrongvolcano1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/volcano_mistake1" />
    <!--3rd wrong page-->
    <ImageView
        android:id="@+id/btnOk"
        android:layout_width="103dp"
        android:layout_height="89dp"
        android:background="@null"
        android:onClick="btnOk"
        android:visibility="gone"
        android:contentDescription="@string/desc_button_Ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841"
        app:srcCompat="@drawable/button_ok" />

    <!--right page-->
    <ImageView
        android:id="@+id/curtain"
        android:layout_width="801dp"
        android:layout_height="440dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191"
        app:srcCompat="@drawable/curtains" />
    <!--right page-->
    <ImageView
        android:id="@+id/welldone"
        android:layout_width="649dp"
        android:layout_height="368dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/curtain"
        app:srcCompat="@drawable/welldone" />
    <!--right page-->
    <ImageView
        android:id="@+id/btnProceed"
        android:layout_width="93dp"
        android:layout_height="97dp"
        android:background="@null"
        android:onClick="btnProceedPage"
        android:visibility="gone"
        android:contentDescription="@string/desc_manual_button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824"
        app:srcCompat="@drawable/button_proceed" />

    <ImageView
        android:id="@+id/volcano_card2"
        android:layout_width="591dp"
        android:layout_height="345dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/volcano_prompt2" />

    <ImageView
        android:id="@+id/fourth_choice"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_manual_button_next"
        android:onClick="pageFourthChoice"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        app:srcCompat="@drawable/v4" />

    <ImageView
        android:id="@+id/fifth_choice"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_manual_button_next"
        android:onClick="pageFifthChoice"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        app:srcCompat="@drawable/v5" />

    <ImageView
        android:id="@+id/sixth_choice"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_manual_button_next"
        android:onClick="pageSixthChoice"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        app:srcCompat="@drawable/v6" />

    <ImageView
        android:id="@+id/wrongvolcano2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/volcano_mistake2" />


    <ImageView
        android:id="@+id/volcano_card3"
        android:layout_width="591dp"
        android:layout_height="345dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/volcano_prompt3" />

    <ImageView
        android:id="@+id/seventh_choice"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_manual_button_next"
        android:onClick="pageSeventhChoice"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        app:srcCompat="@drawable/v7" />

    <ImageView
        android:id="@+id/eight_choice"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_manual_button_next"
        android:onClick="pageEightChoice"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        app:srcCompat="@drawable/v8" />

    <ImageView
        android:id="@+id/ninth_choice"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_manual_button_next"
        android:onClick="pageNinthChoice"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        app:srcCompat="@drawable/v9" />

    <ImageView
        android:id="@+id/wrongvolcano3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/volcano_mistake3" />


    <ImageView
        android:id="@+id/volcano_card4"
        android:layout_width="591dp"
        android:layout_height="345dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/volcano_prompt4" />

    <ImageView
        android:id="@+id/tenth_choice"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_manual_button_next"
        android:onClick="pageTenthChoice"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        app:srcCompat="@drawable/v10" />

    <ImageView
        android:id="@+id/eleventh_choice"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_manual_button_next"
        android:onClick="pageEleventhChoice"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        app:srcCompat="@drawable/v11" />

    <ImageView
        android:id="@+id/twelve_choice"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_manual_button_next"
        android:onClick="pageTwelveChoice"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        app:srcCompat="@drawable/v12" />

    <ImageView
        android:id="@+id/wrongvolcano4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/volcano_mistake4" />


    <ImageView
        android:id="@+id/volcano_card5"
        android:layout_width="591dp"
        android:layout_height="345dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/volcano_prompt5" />

    <ImageView
        android:id="@+id/thirteen_choice"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_manual_button_next"
        android:onClick="pageThirteenChoice"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602"
        app:srcCompat="@drawable/v13" />

    <ImageView
        android:id="@+id/fourteen_choice"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_manual_button_next"
        android:onClick="pageFourteenChoice"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602"
        app:srcCompat="@drawable/v14" />

    <ImageView
        android:id="@+id/wrongvolcano5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/volcano_mistake5" />



</androidx.constraintlayout.widget.ConstraintLayout>